<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guitar Tempo and Metronome</string>
    <string name="settings_screen_awake">Screen Awake</string>
    <string name="strBeats">4/4</string>
    <string name="strStart">Start</string>
    <string name="strBPM">50 BPM</string>
    <string name="strNumBeats">4</string>
    <string name="strUp">\uF067</string>
    <string name="strDown">\uF068</string>
    <string name="strArrowUp">\uF077</string>
    <string name="strArrowDown">\uF078</string>
    <string name="msg_accs_beats_button">Beats State</string>
    <string name="other_apps">Our Other Apps</string>
    <string name="flurry_analytics_id">K238CM399XS2ZGDYRP47</string>
    <string name="inmobi_id">0a1022908b364f8291b4afa4a3927d54</string>
    <string name="play_publisher_url">market://search?q=pub:CreativeV</string>
</resources>
