<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context=".BpmFragment">

    <Button
        android:id="@+id/btnBPMUp"
        style="@style/style_bpm_btn"
        android:text="@string/strArrowUp"
        android:textColor="@color/green_dark" />

    <TextView
        android:id="@+id/txtBPM"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/strBPM"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btnBPMDown"
        style="@style/style_bpm_btn"
        android:text="@string/strArrowDown"
        android:textColor="@color/red_dark" />

</LinearLayout>